# aipdi

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
aipdi/: __init__.py  catalogue.py  scoring.py  sensitivity.py  weighting.py
aipdi/data/: catalogue.csv  weights_default.csv
examples/: example_scoring.py  example_sensitivity.py
supplement/: README.md  case_scores.csv  case_scores.md  case_scores_extended.csv  case_scores_extended.md  codebook.md  evidence_coverage.csv  paper_references.md  practitioner_guide.md  provider_availability.md  provider_incidents.csv  related_indices_comparison.md  table_V_full_catalogue.csv  table_V_full_catalogue.md  trimmed_material.md
supplement/figures/: fig2_concentration.csv  fig3_multimodel.csv  fig6_funding.csv  fig7_sample_composition.csv  figures.md
tests/: test_scoring.py
tools/: interrater.py
