[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aipdi"
version = "0.1.0"
description = "Reference implementation of the AI-Provider Dependency Index (AIPDI)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mohammadamin Keshtkar", email = "mohammad@prizelyapp.com" }]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
sensitivity = ["SALib>=1.4"]
test = ["pytest>=7.0"]

[tool.setuptools]
packages = ["aipdi"]

[tool.setuptools.package-data]
aipdi = ["data/*.csv"]
